<resources>
    <string name="app_name">BabyBuy</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reg_link">Dont have an account? <u>Register</u></string>
    <string name="log_link">Already have an account? <u>Login</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="googleApi">AIzaSyDd53Oc4QwDKlSzvkHt3TuW7BrQBtNziwo</string>

    //Headings
    <string name="heading_one">Record Product</string>
    <string name="heading_two">Google Map</string>
    <string name="heading_three">Share with Friends &amp; Family</string>

    //Description
    <string name="desc_one">
        Record your products, add the name, image, price, and any other relevant information for the products you want to buy.    </string>
    <string name="desc_two">
        Include the location of the shop where you can purchase the product. This can be helpful for making a physical purchase.    </string>
    <string name="desc_three">
        Send product details to your family through a messaging app or email. </string>
</resources>