<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gray"
    tools:context=".RegisterActivity">
    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="150dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="230dp"
        android:background="@drawable/custom_header_bg"
        android:padding="10dp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/txtBoxUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/txtSignup"
        app:layout_constraintTop_toBottomOf="@+id/txtSignup"
        app:layout_constraintStart_toStartOf="@id/txtSignup"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_bg"
        android:elevation="20dp"
        android:hint="@string/username"
        android:drawableStart="@drawable/icon_person"
        android:paddingStart="15dp"
        android:drawablePadding="20dp"
        />
    <EditText
        android:id="@+id/txtBoxEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtBoxUsername"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxUsername"
        app:layout_constraintStart_toStartOf="@id/txtBoxUsername"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:elevation="20dp"
        android:hint="Email"
        android:drawableStart="@drawable/email_icon"
        android:paddingStart="15dp"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/txtBoxPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="20dp"
        android:elevation="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/txtBoxEmail"
        app:layout_constraintStart_toStartOf="@id/txtBoxEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxEmail"
        app:layout_constraintVertical_bias="0.383" />
    <EditText
        android:id="@+id/txtBoxRePassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="20dp"
        android:elevation="20dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/txtBoxPassword"
        app:layout_constraintStart_toStartOf="@id/txtBoxPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxPassword"
        app:layout_constraintVertical_bias="0.383" />

    <TextView
        android:id="@+id/txtLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxRePassword"
        app:layout_constraintStart_toStartOf="@+id/txtBoxPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtBoxPassword"
        android:layout_marginTop="18dp"
        android:text="@string/log_link"
        android:textSize="16sp"
        android:textColor="@color/design_default_color_secondary_variant"
        android:layout_marginBottom="35dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:backgroundTint="@color/teal_700"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtBoxPassword"
        app:layout_constraintStart_toStartOf="@id/txtBoxPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginLink" />
</androidx.constraintlayout.widget.ConstraintLayout>